--- a/package.json
+++ b/package.json
@@ -4,22 +4,16 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "postinstall": "node src/index.js"
+    "postinstall": "node src/postinstall.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@high-standards-js/base": "^1.4.0",
-    "@high-standards-js/husky": "^1.0.2",
-    "husky": "4.2.5"
+    "@high-standards-js/base": "^1.7.4",
+    "@high-standards-js/husky": "^1.1.2"
   },
   "devDependencies": {
-    "@semantic-release/commit-analyzer": "8.0.1",
-    "@semantic-release/github": "7.0.7",
-    "@semantic-release/npm": "7.0.5",
-    "@semantic-release/release-notes-generator": "9.0.1",
-    "husky": "4.2.5",
-    "semantic-release": "17.0.8"
+    "husky": "4.2.5"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
